force-app/main/default/objects/BasiqConnectorSettings__c/BasiqConnectorSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Basiq Connector Settings</label>
</CustomObject>