force-app/main/default/objects/BasiqConnectorSettings__c/fields/Basiq_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Basiq_Api_Key__c</fullName>
    <label>Basiq Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>