force-app/main/default/objects/BasiqConnectorSettings__c/fields/ContactEmailMapping__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailMapping__c</fullName>
    <label>ContactEmailMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>