force-app/main/default/objects/BasiqConnectorSettings__c/fields/ContactMobileMapping__c.field-meta.xml
<CustomField>
    <fullName>ContactMobileMapping__c</fullName>
    <label>ContactMobileMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>