force-app/main/default/objects/BasiqConnectorSettings__c/fields/LeadEmailMapping__c.field-meta.xml
<CustomField>
    <fullName>LeadEmailMapping__c</fullName>
    <label>LeadEmailMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>