force-app/main/default/objects/BasiqConnectorSettings__c/fields/LeadMobileMapping__c.field-meta.xml
<CustomField>
    <fullName>LeadMobileMapping__c</fullName>
    <label>LeadMobileMapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>